# OfflineCode-Studio

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERABLE_INDEX.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: FindQScintillaQt6.cmake
docs/: ARCHITECTURE.md  BUILDING.md  CI_CD.md  CONVENTIONAL_COMMITS.md  DATABASE_DECISION.md  FEATURE_PLAN.md  FIRST_TIME_CONTRIBUTOR_ISSUES.md  GITHUB_LABELS.md  KNOWN_ISSUES.md  RELEASE_NOTES.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SDD.md  SHOWCASE.md  SRS.md  TESTING.md  UI_WIREFRAMES.md
examples/hello-world/: main.cpp  offlinecode.json
resources/: README.md
src/app/: main.cpp
src/application/interfaces/: compiler_service.h
src/application/services/: build_coordinator.cpp  build_coordinator.h
src/domain/entities/: project.cpp  project.h
src/domain/value_objects/: build_profile.h
src/infrastructure/compiler/: README.md
src/infrastructure/filesystem/: README.md
src/presentation/main_window/: main_window.cpp  main_window.h
tests/integration/: README.md
tests/unit/: build_coordinator_test.cpp  project_test.cpp
